--- a/integration/html/index.html
+++ b/integration/html/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Patrick+Hand&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Patrick+Hand&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>Ocoffee - Vente de café et accessoires</title>
@@ -19,7 +21,9 @@
         <header class="header">
 
             <div class="header__logo">
-                <img class="logo__srv" src="../assets/logo.svg" alt="">
+                <div class="header__logo__img__container">
+                    <img class="logo__srv" src="../assets/logo.svg" alt="">
+                </div>
                 <h1 class="logo__title">oCoffee</h1>
 
             </div>
@@ -46,7 +50,8 @@
                 <div class="presentation__about">
                     <div class="presentation__about__text">
                         <h2 class="section__title">Qui sommes-nous ?</h2>
-                        <p class="presentation__about__text__paragraph">Jean et Jacques Pepper, deux frères passionnés par le café, sont les fondateurs de notre
+                        <p class="presentation__about__text__paragraph">Jean et Jacques Pepper, deux frères passionnés
+                            par le café, sont les fondateurs de notre
                             boutique. Avec une expertise approfondie et un amour profond pour cette délicieuse boisson,
                             ils ont créé un espace où le café est célébré comme une expérience raffinée et inspirante.
                         </p>
@@ -55,36 +60,39 @@
                         <a href="#" class="btn__link--catalog">Voir le catalogue</a>
                     </div>
                 </div>
-                
+
                 <img class="presentation__image" src="../assets/about.webp" alt="">
             </section>
 
             <section class="section news">
-                <h2>Nouveautés</h2>
+                <h2 class="section__title">Nouveautés</h2>
                 <div class="news__articles">
                     <div class="news__article">
-                        <div class="news__article__img">
-                            <img src="../assets/coffees/compressed/909010558.webp" alt="">
+                        <div class="news__article__img__container">
+                            <img class="news__article__img" src="../assets/coffees/compressed/909010558.webp" alt="">
                         </div>
                         <div class="news__article__description">
-                            Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté. </div>
+                            <h3 class="article__title">Peruvian Arabica</h3>
+                            <p>Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté.</p> </div>
                         <div class="article__btn"><a href="#">Découvrir</a></div>
                     </div>
                     <div class="news__article">
-                        <div class="news__article__img">
-                            <img src="../assets/coffees/compressed/954589100.webp" alt="">
+                        <div class="news__article__img__container">
+                            <img class="news__article__img" src="../assets/coffees/compressed/954589100.webp" alt="">
                         </div>
                         <div class="news__article__description">
-                            Café rare au goût riche, une acidité douce et des nuances subtiles.
+                            <h3 class="article__title">Hawaiian Kona</h3>
+                            <p>Café rare au goût riche, une acidité douce et des nuances subtiles.</p>
                         </div>
                         <div class="article__btn"><a href="#">Découvrir</a></div>
                     </div>
                     <div class="news__article">
-                        <div class="news__article__img">
-                            <img src="../assets/coffees/compressed/958090105.webp" alt="">
+                        <div class="news__article__img__container">
+                            <img class="news__article__img" src="../assets/coffees/compressed/958090105.webp" alt="">
                         </div>
                         <div class="news__article__description">
-                            Café avec des notes de fruits, une acidité vive et un corps plein.
+                            <h3 class="article__title">Nicaraguan Maragogipe</h3>
+                            <p>Café avec des notes de fruits, une acidité vive et un corps plein.</p>
                         </div>
                         <div class="article__btn"><a href="#">Découvrir</a></div>
                     </div>
