début intégration catalogue

--- a/integration/html/index.html
+++ b/integration/html/index.html
@@ -66,31 +66,32 @@
 
             <section class="section news">
                 <h2 class="section__title">Nouveautés</h2>
-                <div class="news__articles">
-                    <div class="news__article">
-                        <div class="news__article__img__container">
-                            <img class="news__article__img" src="../assets/coffees/compressed/909010558.webp" alt="">
+                <div class="articles">
+                    <div class="article">
+                        <div class="article__img__container">
+                            <img class="article__img" src="../assets/coffees/compressed/909010558.webp" alt="">
                         </div>
-                        <div class="news__article__description">
+                        <div class="article__description">
                             <h3 class="article__title">Peruvian Arabica</h3>
-                            <p>Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté.</p> </div>
+                            <p>Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté.</p>
+                        </div>
                         <div class="article__btn"><a href="#">Découvrir</a></div>
                     </div>
-                    <div class="news__article">
-                        <div class="news__article__img__container">
-                            <img class="news__article__img" src="../assets/coffees/compressed/954589100.webp" alt="">
+                    <div class="article">
+                        <div class="article__img__container">
+                            <img class="article__img" src="../assets/coffees/compressed/954589100.webp" alt="">
                         </div>
-                        <div class="news__article__description">
+                        <div class="article__description">
                             <h3 class="article__title">Hawaiian Kona</h3>
                             <p>Café rare au goût riche, une acidité douce et des nuances subtiles.</p>
                         </div>
                         <div class="article__btn"><a href="#">Découvrir</a></div>
                     </div>
-                    <div class="news__article">
-                        <div class="news__article__img__container">
-                            <img class="news__article__img" src="../assets/coffees/compressed/958090105.webp" alt="">
+                    <div class="article">
+                        <div class="article__img__container">
+                            <img class="article__img" src="../assets/coffees/compressed/958090105.webp" alt="">
                         </div>
-                        <div class="news__article__description">
+                        <div class="article__description">
                             <h3 class="article__title">Nicaraguan Maragogipe</h3>
                             <p>Café avec des notes de fruits, une acidité vive et un corps plein.</p>
                         </div>
