integration catalogue fin

--- a/integration/html/articles.html
+++ b/integration/html/articles.html
@@ -46,12 +46,20 @@
         </header>
 
         <main>
-            
+
             <div class="catalog__header">
                 <div class="catalog__title">
                     <h2 class="section__title">Notre Catalogue</h2>
                 </div>
-                <div class="catalog__select"></div>
+                <div class="catalog__select">
+                    <select class="select" id="category" name="category">
+                        <option value="" selected disabled>-- Choisissez une catégorie --</option>
+                        <option value="option1">Option 1</option>
+                        <option value="option2">Option 2</option>
+                        <option value="option3">Option 3</option>
+                        <option value="option4">Option 4</option>
+                    </select>
+                </div>
             </div>
 
             <div>
