mise e place responsive et architecture

--- a/integration/html/404.html
+++ b/integration/html/404.html
@@ -60,7 +60,9 @@
             </div>
 
         </main>
-        </di>
+        </div>
+
+        <footer class="footer">&copy; 2024 oCoffee</footer>
 
 </body>
 
