--- a/integration/html/index.html
+++ b/integration/html/index.html
@@ -30,13 +30,16 @@
 
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item">
+                    <li class="nav__item menu__responsive">
+                        <a href="#">Menu</a>
+                    </li>
+                    <li class="nav__item show__menu">
                         <a href="#" class="nav_link">Accueil</a>
                     </li>
-                    <li class="nav__item">
+                    <li class="nav__item show__menu">
                         <a href="#" class="nav_link">Catalogue</a>
                     </li>
-                    <li class="nav__item">
+                    <li class="nav__item show__menu">
                         <a href="#" class="nav_link">La boutique</a>
                     </li>
                 </ul>
@@ -102,6 +105,8 @@
 
         </main>
     </div>
+
+    <footer class="footer">&copy; 2024 oCoffee</footer>
 
 </body>
 
