--- a/integration/html/article.html
+++ b/integration/html/article.html
@@ -66,7 +66,9 @@
             </div>
 
         </main>
-        </di>
+        </div>
+
+        <footer class="footer">&copy; 2024 oCoffee</footer>
 
 </body>
 
