--- a/integration/html/articles.html
+++ b/integration/html/articles.html
@@ -143,7 +143,9 @@
             </div>
 
         </main>
-        </di>
+        </div>
+
+        <footer class="footer">&copy; 2024 oCoffee</footer>
 
 </body>
 
